--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,10 @@
     "jquery": "~2.0.3",
     "underscore": "~1.5.2",
     "backbone": "~1.0.0",
-    "bootstrap": "~3.1.1"
+    "bootstrap": "~3.1.1",
+    "modernizr": "~2.8.2",
+    "requirejs": "~2.1.14",
+    "backbone.localstorage": "~1.1.7"
   },
   "ignore": [
     "**/.*",
